--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <h1>Happy Anniversary</h1>
     <h2>Mummy and Papa </h2>
 
-    <img class=" Flower" src="images/mountain.png" alt="mountain-img">
-    <img class=" Flower1" src="images/mountain.png" alt="mountain-img">
-<img class=" Flower1" src="images/mountain.png" alt="mountain-img">
-<img class=" Flower1" src="images/mountain.png" alt="mountain-img">
+    <img class=" Flower" src="mountain.png" alt="mountain-img">
+    <img class=" Flower1" src="mountain.png" alt="mountain-img">
+<img class=" Flower1" src="mountain.png" alt="mountain-img">
+<img class=" Flower1" src="mountain.png" alt="mountain-img">
 
 
 
@@ -38,12 +38,12 @@
 
   <div class="skills">
     <div class="skill-row">
-      <img class="skill" src="images/1.jpg" alt="Cooking">
+      <img class="skill" src="1.jpg" alt="Cooking">
 
       <p class="Center">Dear Mumma and Papa, I am blessed to be gifted with the 2 perfect role mobels in life. You inspire me in so many ways. Wishing you many more happy years together.</p>
     </div>
     <div class="skill-row">
-      <img class="skill1" src="images/2.jpg" alt="Cycling">
+      <img class="skill1" src="2.jpg" alt="Cycling">
       <p class"Center"> You are the parents that all kids hope to have. You both are pillars of support that each and every family wishes it had. Happy Anniversary Mummy and Papa.</p>
 
     </div>
@@ -54,36 +54,36 @@
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
-          <img class="testimonial-image" src="images/4.jpg" alt="dog-profile">
+          <img class="testimonial-image" src="4.jpg" alt="dog-profile">
         </div>
         <div class="carousel-item container-fluid">
 
-          <img class="testimonial-image" src="images/3.jpg" alt="lady-profile">
-        </div>
-
-        <div class="carousel-item container-fluid">
-
-          <img class="testimonial-image" src="images/5.jpg" alt="lady-profile">
+          <img class="testimonial-image" src="3.jpg" alt="lady-profile">
         </div>
 
         <div class="carousel-item container-fluid">
 
-          <img class="testimonial-image" src="images/6.jpg" alt="lady-profile">
+          <img class="testimonial-image" src="5.jpg" alt="lady-profile">
         </div>
 
         <div class="carousel-item container-fluid">
 
-          <img class="testimonial-image" src="images/7.jpg" alt="lady-profile">
+          <img class="testimonial-image" src="6.jpg" alt="lady-profile">
         </div>
 
         <div class="carousel-item container-fluid">
 
-          <img class="testimonial-image" src="images/8.jpg" alt="lady-profile">
+          <img class="testimonial-image" src="7.jpg" alt="lady-profile">
         </div>
 
         <div class="carousel-item container-fluid">
 
-          <img class="testimonial-image" src="images/9.jpg" alt="lady-profile">
+          <img class="testimonial-image" src="8.jpg" alt="lady-profile">
+        </div>
+
+        <div class="carousel-item container-fluid">
+
+          <img class="testimonial-image" src="9.jpg" alt="lady-profile">
         </div>
 </div>
       <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
